Arreglados enlaces y responsive
Arreglados enlaces y responsive

--- a/contactold.html
+++ b/contactold.html
@@ -51,13 +51,13 @@
                 </div>
                 <div class="col-lg-4 text-center text-lg-end">
                     <div class="d-flex align-items-center justify-content-end">
-                        <a href="https://www.facebook.com/profile.php?id=100066758516455"
+                        <a href="https://www.facebook.com/share/EbPRFjtX4EkzpzPt/?mibextid=qi2Omg"
                             class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i
                                 class="fab fa-facebook-f"></i></a>
                         <a href="https://www.youtube.com/@LaboratorioBio-Cell"
                             class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i
                                 class="fab fa-youtube"></i></a>
-                        <a href="https://www.instagram.com/laboratorios_biocell"
+                        <a href="https://www.instagram.com/serv.med.ocup.biocell?igsh=dDF3NDRvd3o5YnZw"
                             class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i
                                 class="fab fa-instagram"></i></a>
                         <a href="https://www.tiktok.com/@laboratoriobiocell?_t=8o2qZoabZG1&_r=1"
