--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>Bio-Cell - Servicios Médicos Ocupacionales</title>
+        <title>Bio-Cell - Servicios Médicos Ocupacional</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="" name="Servicios, Médicos, Ocupacionales">
         <meta content="" name="Servicios Médicos Ocupacionales">
@@ -53,8 +53,8 @@
                 <div class="col-lg-4 text-center text-lg-end">
                     <div class="d-flex align-items-center justify-content-end">
                         <a href="https://api.whatsapp.com/send/?phone=78004706" class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i class="fab fa-whatsapp"></i></a>
-                        <a href="https://www.facebook.com/profile.php?id=100066758516455" class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i class="fab fa-facebook-f"></i></a>
-                        <a href="https://www.instagram.com/laboratorios_biocell" class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i class="fab fa-instagram"></i></a>
+                        <a href="https://www.facebook.com/share/EbPRFjtX4EkzpzPt/?mibextid=qi2Omg" class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/serv.med.ocup.biocell?igsh=dDF3NDRvd3o5YnZw" class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i class="fab fa-instagram"></i></a>
                         
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
                         <a href="about.html" class="nav-item nav-link">Nosotros</a>
-                        <a href="service.html" class="nav-item nav-link">Servicios médicos ocupacionales</a>
+                        <a href="service.html" class="nav-item nav-link">Servicios médicos ocupacional</a>
                         <a href="contact.html" class="nav-item nav-link">Contacto</a>
                        <!--  <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -102,10 +102,10 @@
                     <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
                     <div class="carousel-caption">
                         <div class="carousel-caption-content p-3">
-                            <h5 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Servicios médicos ocupacionales</h5>
+                            <h5 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Servicios médicos ocupacional</h5>
                             <h1 class="display-1 text-capitalize text-white mb-4">bienestar y seguridad</h1>
-                            <p class="mb-5 fs-5">entendemos que la salud de tus empleados es clave para el éxito y
-                                productividad de tu organización 
+                            <p class="mb-5 fs-5">Entendemos que la salud de tus empleados es clave para el éxito y
+                                productividad de tu organización. 
                             </p>
                             <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="contact.html">Contáctanos</a>
                         </div>
@@ -115,11 +115,11 @@
                     <img src="img/carousel-2.jpg" class="img-fluid w-100" alt="Image">
                     <div class="carousel-caption">
                         <div class="carousel-caption-content p-3">
-                            <h5 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Servicios médicos ocupacionales</h5>
+                            <h5 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Servicios médicos ocupacional</h5>
                             <h1 class="display-1 text-capitalize text-white mb-4">Equipo de profesionales capacitados</h1>
-                            <p class="mb-5 fs-5 animated slideInDown">están aquí para
+                            <p class="mb-5 fs-5 animated slideInDown">Están aquí para
                                 ofrecerte servicios médicos de calidad, diseñados específicamente para
-                                proteger la salud de tu equipo y cumplir con las normativas laborales vigentes 
+                                proteger la salud de tu equipo y cumplir con las normativas laborales vigentes.
                             </p>
                             <a class="btn btn-primary rounded-pill text-white py-3 px-5" href="contact.html">Contáctanos</a>
                         </div>
@@ -847,12 +847,12 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="text-white mb-4"><i class="fas fa-star-of-life me-3"></i>BIO-CELL</h4>
-                            <p>Servicios médicos ocupacionales
+                            <p>Servicios médicos ocupacional
                             </p>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-share fa-2x text-white me-2"></i>
-                                <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.facebook.com/profile.php?id=100066758516455"><i class="fab fa-facebook-f"></i></a>
-                                <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.instagram.com/laboratorios_biocell"><i class="fab fa-instagram"></i></a>  
+                                <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.facebook.com/share/EbPRFjtX4EkzpzPt/?mibextid=qi2Omg"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.instagram.com/serv.med.ocup.biocell?igsh=dDF3NDRvd3o5YnZw"><i class="fab fa-instagram"></i></a>  
                             </div>
                         </div>
                     </div>
@@ -871,7 +871,7 @@
                             <a href="service.html"><i class="fas fa-angle-right me-2"></i> Exámenes Médicos Ocupacionales</a>
                             <a href="service.html"><i class="fas fa-angle-right me-2"></i> Exámenes Complementarios</a>
                             <a href="service.html"><i class="fas fa-angle-right me-2"></i> Valoraciones por Especialidad</a>
-                            <a href="service.html"><i class="fas fa-angle-right me-2"></i> OTRAS PRUEBAS</a>
+                            <a href="service.html"><i class="fas fa-angle-right me-2"></i> Otras pruebas</a>
 
                         </div>
                     </div>
