--- a/about.html
+++ b/about.html
@@ -3,10 +3,10 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Bio-Cell - Servicios Médicos Ocupacionales</title>
+    <title>Bio-Cell - Servicios Médicos Ocupacional</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="Servicios, Médicos, Ocupacionales">
-    <meta content="" name="Servicios Médicos Ocupacionales">
+    <meta content="" name="Servicios Médicos Ocupacional">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -62,10 +62,10 @@
                     <a href="https://api.whatsapp.com/send/?phone=78004706"
                         class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i
                             class="fab fa-whatsapp"></i></a>
-                    <a href="https://www.facebook.com/profile.php?id=100066758516455"
+                    <a href="https://www.facebook.com/share/EbPRFjtX4EkzpzPt/?mibextid=qi2Omg"
                         class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i
                             class="fab fa-facebook-f"></i></a>
-                    <a href="https://www.instagram.com/laboratorios_biocell"
+                    <a href="https://www.instagram.com/serv.med.ocup.biocell?igsh=dDF3NDRvd3o5YnZw"
                         class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i
                             class="fab fa-instagram"></i></a>
 
@@ -90,7 +90,7 @@
                 <div class="navbar-nav ms-auto py-0">
                     <a href="index.html" class="nav-item nav-link">Inicio</a>
                     <a href="about.html" class="nav-item nav-link active">Nosotros</a>
-                    <a href="service.html" class="nav-item nav-link">Servicios médicos ocupacionales</a>
+                    <a href="service.html" class="nav-item nav-link">Servicios médicos ocupacional</a>
                     <a href="contact.html" class="nav-item nav-link">Contacto</a>
                     <!--  <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -359,16 +359,16 @@
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="footer-item d-flex flex-column">
                         <h4 class="text-white mb-4"><i class="fas fa-star-of-life me-3"></i>BIO-CELL</h4>
-                        <p>Servicios médicos ocupacionales
+                        <p>Servicios médicos ocupacional
                         </p>
                         <div class="d-flex align-items-center">
                             <i class="fas fa-share fa-2x text-white me-2"></i>
                             <a class="btn-square btn btn-primary text-white rounded-circle mx-1"
-                                href="https://www.facebook.com/profile.php?id=100066758516455"><i
+                                href="https://www.facebook.com/share/EbPRFjtX4EkzpzPt/?mibextid=qi2Omg"><i
                                     class="fab fa-facebook-f"></i></a>
 
                             <a class="btn-square btn btn-primary text-white rounded-circle mx-1"
-                                href="https://www.instagram.com/laboratorios_biocell"><i
+                                href="https://www.instagram.com/serv.med.ocup.biocell?igsh=dDF3NDRvd3o5YnZw"><i
                                     class="fab fa-instagram"></i></a>
 
                         </div>
@@ -390,8 +390,7 @@
                             Ocupacionales</a>
                         <a href="service.html"><i class="fas fa-angle-right me-2"></i> Exámenes Complementarios</a>
                         <a href="service.html"><i class="fas fa-angle-right me-2"></i> Valoraciones por Especialidad</a>
-                        <a href="service.html"><i class="fas fa-angle-right me-2"></i> OTRAS PRUEBAS</a>
-
+                        <a href="service.html"><i class="fas fa-angle-right me-2"></i> Otras pruebas</a>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-3">
