Cambios con saru

--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link">Inicio</a>
                         <a href="about.html" class="nav-item nav-link">Nosotros</a>
-                        <a href="service.html" class="nav-item nav-link">Servicios médicos ocupacional</a>
+                        <a href="service.html" class="nav-item nav-link">Servicios Médicos Ocupacional</a>
                         <a href="contact.html" class="nav-item nav-link active">Contacto</a>
                        <!--  <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -170,7 +170,7 @@
                         <!--separa-->
                     </div>
                     <div class="col-lg-5 col-xl-5 contact-form  wow fadeInRight" data-wow-delay="0.3s">
-                        <h2 class="mb-4">Servicio médico ocupacional</h2>
+                        <h2 class="mb-4">Servicios Médicos Ocupacional</h2>
                         <!--MAPA-->                   
                         <iframe class="w-100 h-100"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3799.082421667049!2d-63.19060208551618!3d-17.78782307986441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93f1e811cb3ebad9%3A0x5e5d85e01dc53bb4!2sLaboratorio+Bio-Cell+Central!5e0!3m2!1ses!2sbo!4v1555533808299!5m2!1ses!2sbo"
@@ -192,9 +192,7 @@
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="text-white mb-4"><i class="fas fa-star-of-life me-3"></i>BIO-CELL</h4>
-                            <p>Servicios médicos ocupacional
-                            </p>
+                            <h4 class="text-white mb-4"><i class=""></i>Servicios Médicos Ocupacional</h4>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-share fa-2x text-white me-2"></i>
                                 <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.facebook.com/share/EbPRFjtX4EkzpzPt/?mibextid=qi2Omg"><i class="fab fa-facebook-f"></i></a>
@@ -216,7 +214,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Servicios</h4>
-                            <a href="service.html"><i class="fas fa-angle-right me-2"></i> Exámenes Médicos Ocupacionales</a>
+                            <a href="service.html"><i class="fas fa-angle-right me-2"></i> Exámen Médico Ocupacional</a>
                             <a href="service.html"><i class="fas fa-angle-right me-2"></i> Exámenes Complementarios</a>
                             <a href="service.html"><i class="fas fa-angle-right me-2"></i> Valoraciones por Especialidad</a>
                             <a href="service.html"><i class="fas fa-angle-right me-2"></i> Otras pruebas</a>
