--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
                 <div class="navbar-nav ms-auto py-0">
                     <a href="index.html" class="nav-item nav-link">Inicio</a>
                     <a href="about.html" class="nav-item nav-link active">Nosotros</a>
-                    <a href="service.html" class="nav-item nav-link">Servicios médicos ocupacional</a>
+                    <a href="service.html" class="nav-item nav-link">Servicios Médicos Ocupacional</a>
                     <a href="contact.html" class="nav-item nav-link">Contacto</a>
                     <!--  <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -170,7 +170,7 @@
                 </div>
                 <div class="col-md-6 offset-md-1">
                     <div class="ms-md-2 ms-lg-5">
-                        <span class="text-muted">Conoce nuestra</span>
+                        <span class="contact-icon-color">Conoce nuestra</span>
                         <h2 class="display-5 fw-bold">Misión</h2>
                         <p class="lead">Proporcionar servicios de
                             salud ocupacional de la más alta calidad para proteger y mejorar la salud y el bienestar de
@@ -191,7 +191,7 @@
             <div class="row gx-4 align-items-center justify-content-between">
                 <div class="col-md-5 order-2 order-md-1">
                     <div class="mt-5 mt-md-0">
-                        <span class="text-muted">Conoce nuestra</span>
+                        <span class="contact-icon-color">Conoce nuestra</span>
                         <h2 class="display-5 fw-bold">Visión</h2>
                         <p class="lead">Nuestra visión es ser líderes en el ámbito de la salud ocupacional, reconocidos
                             por
@@ -201,7 +201,7 @@
                             los
                             desafíos de la salud laboral. Nos vemos como un agente de cambio positivo,
                             promoviendo prácticas laborales seguras y saludables que beneficien a las empresas, a
-                            sus empleados y a la sociedad en general</p>
+                            sus empleados y a la sociedad en general.</p>
                     </div>
                 </div>
                 <div class="col-md-5 order-1 order-md-2"><img class="img-fluid rounded-3" src="img/VISIÓN .jpg"></div>
@@ -358,8 +358,7 @@
             <div class="row g-5">
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="footer-item d-flex flex-column">
-                        <h4 class="text-white mb-4"><i class="fas fa-star-of-life me-3"></i>BIO-CELL</h4>
-                        <p>Servicios médicos ocupacional
+                        <h4 class="text-white mb-4"><i class=""></i>Servicios Médicos Ocupacional</h4>
                         </p>
                         <div class="d-flex align-items-center">
                             <i class="fas fa-share fa-2x text-white me-2"></i>
@@ -386,8 +385,7 @@
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="footer-item d-flex flex-column">
                         <h4 class="mb-4 text-white">Servicios</h4>
-                        <a href="service.html"><i class="fas fa-angle-right me-2"></i> Exámenes Médicos
-                            Ocupacionales</a>
+                        <a href="service.html"><i class="fas fa-angle-right me-2"></i> Exámen Médico Ocupacional</a>
                         <a href="service.html"><i class="fas fa-angle-right me-2"></i> Exámenes Complementarios</a>
                         <a href="service.html"><i class="fas fa-angle-right me-2"></i> Valoraciones por Especialidad</a>
                         <a href="service.html"><i class="fas fa-angle-right me-2"></i> Otras pruebas</a>
