--- a/contactold.html
+++ b/contactold.html
@@ -82,7 +82,7 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link ">Inicio</a>
                         <a href="about.html" class="nav-item nav-link">Nosotros</a>
-                        <a href="service.html" class="nav-item nav-link">Servicios médicos ocupacionales</a>
+                        <a href="service.html" class="nav-item nav-link">Servicios Médicos Ocupacionales</a>
                         <a href="contact.html" class="nav-item nav-link active">Contacto</a>
                         <!--  <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
