--- a/index copy.html
+++ b/index copy.html
@@ -77,7 +77,7 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
                         <a href="about.html" class="nav-item nav-link">Nosotros</a>
-                        <a href="service.html" class="nav-item nav-link">Servicios médicos ocupacionales</a>
+                        <a href="service.html" class="nav-item nav-link">Servicios Médicos Ocupacionales</a>
                         <a href="contact.html" class="nav-item nav-link">Contacto</a>
                        <!--  <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -102,7 +102,7 @@
                     <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
                     <div class="carousel-caption">
                         <div class="carousel-caption-content p-3">
-                            <h5 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Servicios médicos ocupacionales</h5>
+                            <h5 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Servicios Médicos Ocupacionales</h5>
                             <h1 class="display-1 text-capitalize text-white mb-4">bienestar y seguridad</h1>
                             <p class="mb-5 fs-5">entendemos que la salud de tus empleados es clave para el éxito y
                                 productividad de tu organización 
@@ -115,7 +115,7 @@
                     <img src="img/carousel-2.jpg" class="img-fluid w-100" alt="Image">
                     <div class="carousel-caption">
                         <div class="carousel-caption-content p-3">
-                            <h5 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Servicios médicos ocupacionales</h5>
+                            <h5 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Servicios Médicos Ocupacionales</h5>
                             <h1 class="display-1 text-capitalize text-white mb-4">Equipo de profesionales capacitados</h1>
                             <p class="mb-5 fs-5 animated slideInDown">están aquí para
                                 ofrecerte servicios médicos de calidad, diseñados específicamente para
@@ -150,7 +150,7 @@
                            </div>
                             <div class="service-content rounded-bottom bg-light p-4">
                                 <div class="service-content-inner">
-                                    <h5 class="mb-4">Exámenes Médicos Ocupacionales</h5>
+                                    <h5 class="mb-4">Exámen Médico Ocupacional</h5>
                                     <p class="mb-4">Dolor, sit amet consectetur adipisicing elit. Soluta inventore cum accusamus, dolor qui ullam</p>
                                     <a href="#" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Read More</a>
                                 </div>
