--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <div class="navbar-nav ms-auto py-0">
                         <a href="index.html" class="nav-item nav-link active">Inicio</a>
                         <a href="about.html" class="nav-item nav-link">Nosotros</a>
-                        <a href="service.html" class="nav-item nav-link">Servicios médicos ocupacional</a>
+                        <a href="service.html" class="nav-item nav-link">Servicios Médicos Ocupacional</a>
                         <a href="contact.html" class="nav-item nav-link">Contacto</a>
                        <!--  <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -102,7 +102,7 @@
                     <img src="img/carousel-1.jpg" class="img-fluid w-100" alt="Image">
                     <div class="carousel-caption">
                         <div class="carousel-caption-content p-3">
-                            <h5 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Servicios médicos ocupacional</h5>
+                            <h5 class="text-white text-capitalize fw-bold mb-4" style="letter-spacing: 3px;">Servicios Médicos Ocupacional</h5>
                             <h1 class="display-1 text-capitalize text-white mb-4">bienestar y seguridad</h1>
                             <p class="mb-5 fs-5">Entendemos que la salud de tus empleados es clave para el éxito y
                                 productividad de tu organización. 
@@ -115,7 +115,7 @@
                     <img src="img/carousel-2.jpg" class="img-fluid w-100" alt="Image">
                     <div class="carousel-caption">
                         <div class="carousel-caption-content p-3">
-                            <h5 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">Servicios médicos ocupacional</h5>
+                            <h5 class="text-white text-capitalize fw-bold mb-4" style="letter-spacing: 3px;">Servicios Médicos Ocupacional</h5>
                             <h1 class="display-1 text-capitalize text-white mb-4">Equipo de profesionales capacitados</h1>
                             <p class="mb-5 fs-5 animated slideInDown">Están aquí para
                                 ofrecerte servicios médicos de calidad, diseñados específicamente para
@@ -150,7 +150,7 @@
                            </div>
                             <div class="service-content rounded-bottom bg-light p-4">
                                 <div class="service-content-inner">
-                                    <h5 class="mb-4">Exámenes Médicos Ocupacionales</h5>
+                                    <h5 class="mb-4">Exámen Médico Ocupacional</h5>
                                     <p class="mb-4">Acto mediante el cual se interroga y examina a un trabajador, con el fin de monitorear la exposición a factores de riesgo y determinar la existenia de consecuencias en la persona por dicha exposición.</p>
                                    <!--  <a href="service.html#saludOcupacional" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más >></a> -->
                                 </div>
@@ -166,7 +166,7 @@
                             <div class="service-content rounded-bottom bg-light p-4">
                                 <div class="service-content-inner">
                                     <h5 class="mb-4">Exámenes Complementarios</h5>
-                                    <p class="mb-4">Los exámenes médicos ocupacionales se realizan según el riesgo de exposición de cada trabajador a agentes nocivos en su trabajo. Ayudan a diagnosticar enfermedades profesionales y a controlar la exposición a riesgos laborales.</p>
+                                    <p class="mb-4">Los Exámen Médico Ocupacional se realizan según el riesgo de exposición de cada trabajador a agentes nocivos en su trabajo. Ayudan a diagnosticar enfermedades profesionales y a controlar la exposición a riesgos laborales.</p>
                                     <!-- <a href="service.html#saludOcupacional" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más >></a>-->
                                 </div>
                                 <a href="service.html#saludOcupacional" style="z-index: 10;" class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más información</a>
@@ -343,7 +343,7 @@
                             </div>
                             <div class="ms-3">
                                 <h5>Teléfono:</h5>
-                                <span>+591 78004706
+                                <span>3-3521311
                             </div>
                         </div>
                         <br>
@@ -846,9 +846,8 @@
                 <div class="row g-5">
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
-                            <h4 class="text-white mb-4"><i class="fas fa-star-of-life me-3"></i>BIO-CELL</h4>
-                            <p>Servicios médicos ocupacional
-                            </p>
+                            
+                            <h4 class="text-white mb-4"><i class=""></i>Servicios Médicos Ocupacional</h4>
                             <div class="d-flex align-items-center">
                                 <i class="fas fa-share fa-2x text-white me-2"></i>
                                 <a class="btn-square btn btn-primary text-white rounded-circle mx-1" href="https://www.facebook.com/share/EbPRFjtX4EkzpzPt/?mibextid=qi2Omg"><i class="fab fa-facebook-f"></i></a>
@@ -868,7 +867,7 @@
                     <div class="col-md-6 col-lg-6 col-xl-3">
                         <div class="footer-item d-flex flex-column">
                             <h4 class="mb-4 text-white">Servicios</h4>
-                            <a href="service.html"><i class="fas fa-angle-right me-2"></i> Exámenes Médicos Ocupacionales</a>
+                            <a href="service.html"><i class="fas fa-angle-right me-2"></i> Exámen Médico Ocupacional</a>
                             <a href="service.html"><i class="fas fa-angle-right me-2"></i> Exámenes Complementarios</a>
                             <a href="service.html"><i class="fas fa-angle-right me-2"></i> Valoraciones por Especialidad</a>
                             <a href="service.html"><i class="fas fa-angle-right me-2"></i> Otras pruebas</a>
