--- a/service.html
+++ b/service.html
@@ -92,7 +92,7 @@
                 <div class="navbar-nav ms-auto py-0">
                     <a href="index.html" class="nav-item nav-link">Inicio</a>
                     <a href="about.html" class="nav-item nav-link">Nosotros</a>
-                    <a href="service.html" class="nav-item nav-link active">Servicios médicos ocupacional</a>
+                    <a href="service.html" class="nav-item nav-link active">Servicios Médicos Ocupacional</a>
                     <a href="contact.html" class="nav-item nav-link">Contacto</a>
                     <!--  <div class="nav-item dropdown">
                             <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -135,7 +135,7 @@
                 <div class="col-md-10">
                     <div class="row justify-content-center mb-4">
                         <div class="col-lg-8">
-                            <h6 class="mb-3 mt-3 mt-md-0">Exámenes Médicos Ocupacionales</h6>
+                            <h6 class="mb-3 mt-3 mt-md-0">Exámen Médico Ocupacional</h6>
                             <div class="accordion" id="Tech-accordion">
                                 <div class="accordion-item">
                                     <h2 class="accordion-header" id="Tech-headingOne">
@@ -579,8 +579,7 @@
             <div class="row g-5">
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="footer-item d-flex flex-column">
-                        <h4 class="text-white mb-4"><i class="fas fa-star-of-life me-3"></i>BIO-CELL</h4>
-                        <p>Servicios médicos ocupacional
+                        <h4 class="text-white mb-4"><i class=""></i>Servicios Médicos Ocupacional</h4>
                         </p>
                         <div class="d-flex align-items-center">
                             <i class="fas fa-share fa-2x text-white me-2"></i>
@@ -607,8 +606,7 @@
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="footer-item d-flex flex-column">
                         <h4 class="mb-4 text-white">Servicios</h4>
-                        <a href="service.html"><i class="fas fa-angle-right me-2"></i> Exámenes Médicos
-                            Ocupacionales</a>
+                        <a href="service.html"><i class="fas fa-angle-right me-2"></i> Exámen Médico Ocupacional</a>
                         <a href="service.html"><i class="fas fa-angle-right me-2"></i> Exámenes Complementarios</a>
                         <a href="service.html"><i class="fas fa-angle-right me-2"></i> Valoraciones por Especialidad</a>
                         <a href="service.html"><i class="fas fa-angle-right me-2"></i> Otras pruebas</a>
