--- a/about.html
+++ b/about.html
@@ -143,7 +143,7 @@
                     <div class="section-title text-start mb-5">
                         <h4 class="sub-title pe-3 mb-0">Nosotros</h4>
                         <h1 class="display-3 mb-4">Conoce a nuestra familia.</h1>
-                        <p class="mb-4">Fundada el 26/02/2015, Servicios Médicos Ocupacional Biocell ha sido un pionero
+                        <p class="mb-4 small-text">Fundada el 26/02/2015, Servicios Médicos Ocupacional Biocell ha sido un pionero
                             en la promoción de la salud y seguridad en el entorno laboral. Desde nuestros humildes
                             comienzos como una pequeña clínica de salud ocupacional, hemos crecido y evolucionado para
                             convertirnos en un referente en la industria, ofreciendo una amplia gama de servicios de
@@ -172,7 +172,7 @@
                     <div class="ms-md-2 ms-lg-5">
                         <span class="contact-icon-color">Conoce nuestra</span>
                         <h2 class="display-5 fw-bold">Misión</h2>
-                        <p class="lead">Proporcionar servicios de
+                        <p class="lead small-text">Proporcionar servicios de
                             salud ocupacional de la más alta calidad para proteger y mejorar la salud y el bienestar de
                             los trabajadores. Nos esforzamos por crear entornos laborales seguros y saludables, ayudando
                             a las empresas a cumplir con las normativas legales y a fomentar una cultura
@@ -193,7 +193,7 @@
                     <div class="mt-5 mt-md-0">
                         <span class="contact-icon-color">Conoce nuestra</span>
                         <h2 class="display-5 fw-bold">Visión</h2>
-                        <p class="lead">Nuestra visión es ser líderes en el ámbito de la salud ocupacional, reconocidos
+                        <p class="lead small-text">Nuestra visión es ser líderes en el ámbito de la salud ocupacional, reconocidos
                             por
                             nuestra excelencia, innovación y compromiso con la seguridad y bienestar de los
                             trabajadores. Aspiramos a establecer un estándar de referencia en la
