--- a/about.html
+++ b/about.html
@@ -149,7 +149,7 @@
                             convertirnos en un referente en la industria, ofreciendo una amplia gama de servicios de
                             salud ocupacional a empresas de todos los tamaños. Nuestro compromiso con la excelencia y la
                             innovación nos ha permitido establecer relaciones duraderas con nuestros clientes y
-                            adaptarnos continuamente a las necesidades cambiantes del mercado laboral</p>
+                            adaptarnos continuamente a las necesidades cambiantes del mercado laboral.</p>
                         <!-- <div class="mb-4">
                                 <p class="text-secondary"><i class="fa fa-check text-primary me-2"></i> Refresing to get such a personal touch.</p>
                                 <p class="text-secondary"><i class="fa fa-check text-primary me-2"></i> Duis aute irure dolor in reprehenderit in voluptate.</p>
@@ -214,7 +214,7 @@
         <div class="container-fluid">
             <div class="row justify-content-center text-center mb-3">
                 <div class="col-lg-8 col-xl-7">
-                    <span class="text-muted">Conoce nuestros </span>
+                    <span class="contact-icon-color">Conoce nuestros </span>
                     <h2 class="display-5 fw-bold">Valores</h2>
                     <p class="lead">-</p>
                 </div>
@@ -293,7 +293,7 @@
                                     <h5 class="mb-2 mb-lg-4 fw-bold">Trabajo en Equipo</h5>
                                     <p>Fomentamos un ambiente de colaboración y apoyo mutuo,
                                         reconociendo que el trabajo en equipo es esencial para alcanzar nuestros
-                                        objetivos y brindar el mejor servicio posible</p>
+                                        objetivos y brindar el mejor servicio posible.</p>
                                 </div>
                             </div>
                         </div>
@@ -338,7 +338,7 @@
                                     <h5 class="mb-2 mb-lg-4 fw-bold">Desarrollo Continuo</h5>
                                     <p>Valoramos el aprendizaje y el desarrollo continuo,
                                         invirtiendo en la capacitación y crecimiento de nuestro equipo para mantenernos
-                                        a la vanguardia en el campo de la salud ocupacional</p>
+                                        a la vanguardia en el campo de la salud ocupacional.</p>
                                 </div>
                             </div>
                         </div>
