--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                         <p>Estamos atentos a cualquier consulta que necesite</p>
                         <div class="d-flex align-items-start wow fadeIn" data-wow-delay="0.3s">
                             <div class="icon-box-primary">
-                                <i class="bi bi-geo-alt text-dark fs-1"></i>
+                                <i class="bi bi-geo-alt contact-icon-color fs-1"></i>
                             </div>
                             <div class="ms-3">
                                 <h5>Dirección</h5>
@@ -329,7 +329,7 @@
                         <br>
                         <div class="d-flex align-items-start wow fadeIn" data-wow-delay="0.3s">
                             <div class="icon-box-primary">
-                                <i class="bi bi-mailbox text-dark fs-1"></i>
+                                <i class="bi bi-mailbox contact-icon-color fs-1"></i>
                             </div>
                             <div class="ms-3">
                                 <h5>Correo</h5>
@@ -339,7 +339,7 @@
                         <br>
                         <div class="d-flex align-items-start wow fadeIn" data-wow-delay="0.3s">
                             <div class="icon-box-primary">
-                                <i class="bi bi-phone text-dark fs-1"></i>
+                                <i class="bi bi-phone contact-icon-color fs-1"></i>
                             </div>
                             <div class="ms-3">
                                 <h5>Teléfono:</h5>
@@ -349,7 +349,7 @@
                         <br>
                         <div class="d-flex align-items-start wow fadeIn" data-wow-delay="0.3s">
                             <div class="icon-box-primary">
-                                <i class="bi bi-whatsapp text-dark fs-1"></i>
+                                <i class="bi bi-whatsapp contact-icon-color fs-1"></i>
                             </div>
                             <div class="ms-3">
                                 <h5>WhatsApp</h5>
@@ -359,7 +359,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
-                        <h2 class="mb-4">Laboratorio Central</h2>
+                        <h2 class="mb-4">Servicios Médicos Ocupacional</h2>
                         <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.5s">
                             <iframe class="w-200 h-200"
                             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3799.082421667049!2d-63.19060208551618!3d-17.78782307986441!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x93f1e811cb3ebad9%3A0x5e5d85e01dc53bb4!2sLaboratorio+Bio-Cell+Central!5e0!3m2!1ses!2sbo!4v1555533808299!5m2!1ses!2sbo"
