--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
             </div>
             <div class="col-lg-4 text-center text-lg-end">
                 <div class="d-flex align-items-center justify-content-end">
-                    <a href="https://api.whatsapp.com/send/?phone=78004706"
+                    <a href="https://api.whatsapp.com/send/?phone=75536553"
                         class="btn btn-light btn-square border rounded-circle nav-fill me-3"><i
                             class="fab fa-whatsapp"></i></a>
                     <a href="https://www.facebook.com/share/EbPRFjtX4EkzpzPt/?mibextid=qi2Omg"
@@ -143,9 +143,9 @@
                     <div class="section-title text-start mb-5">
                         <h4 class="sub-title pe-3 mb-0">Nosotros</h4>
                         <h1 class="display-3 mb-4">Conoce a nuestra familia.</h1>
-                        <p class="mb-4 small-text">Fundada el 26/02/2015, Servicios Médicos Ocupacional Biocell ha sido un pionero
+                        <p class="mb-4 small-text">Fundada por Florinda Palacios Vega el 26/02/2015, Servicios Médicos Ocupacional Biocell ha sido un pionero
                             en la promoción de la salud y seguridad en el entorno laboral. Desde nuestros humildes
-                            comienzos como una pequeña clínica de salud ocupacional, hemos crecido y evolucionado para
+                            comienzos como un policonsultorio de salud ocupacional, hemos crecido y evolucionado para
                             convertirnos en un referente en la industria, ofreciendo una amplia gama de servicios de
                             salud ocupacional a empresas de todos los tamaños. Nuestro compromiso con la excelencia y la
                             innovación nos ha permitido establecer relaciones duraderas con nuestros clientes y
@@ -399,7 +399,7 @@
                         <a href="mailto:smbiocell@cotas.com.bo"><i
                                 class="fas fa-envelope me-2"></i>smbiocell@cotas.com.bo</a>
                         <a href="tel:33521311"><i class="fas fa-phone me-2"></i> 3-3521311 </a>
-                        <a href="https://api.whatsapp.com/send/?phone=78004706" class="mb-3"><i
+                        <a href="https://api.whatsapp.com/send/?phone=75536553" class="mb-3"><i
                                 class="fas bi-whatsapp me-2"></i> +591 78004706</a>
                     </div>
                 </div>
