--- a/service.html
+++ b/service.html
@@ -560,7 +560,7 @@
 
                     <div class="row justify-content-center mb-4">
                         <div class="col-lg-8">
-                            <a href="https://wa.me/59175536553"
+                            <a href="img/pregfrecsok.jpg" target="_blank"
                                 class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Más información</a>
                         </div>
                     </div>
