--- a/about.html
+++ b/about.html
@@ -393,7 +393,7 @@
                 </div>
                 <div class="col-md-6 col-lg-6 col-xl-3">
                     <div class="footer-item d-flex flex-column">
-                        <h4 class="mb-4 text-white">Contact Info</h4>
+                        <h4 class="mb-4 text-white">Contacto</h4>
                         <a href="https://maps.app.goo.gl/df8goTWRMmpb67wk8"><i class="fa fa-map-marker-alt me-2"></i>
                             Av. Cañoto esquina Mario Flores 700A 2do piso / 1er Anillo </a>
                         <a href="mailto:smbiocell@cotas.com.bo"><i
