--- a/service.html
+++ b/service.html
@@ -561,7 +561,7 @@
                     <div class="row justify-content-center mb-4">
                         <div class="col-lg-8">
                             <a href="img/pregfrecsok.jpg" target="_blank"
-                                class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Requisitos</a>
+                                class="btn btn-primary rounded-pill text-white py-2 px-4 mb-2">Requisitos para exámenes</a>
                         </div>
                     </div>
                 </div>
